<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoteBook</string>
    <string name="app_email">nuran.stv@gmail.com</string>
    <string name="note_ru">Текстовая заметка</string>
    <string name="task_ru">Задача</string>
    <string name="aim_ru">Цель</string>
    <string name="headline_note">Заголовок заметки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="empty_notepad">Нажмите + , чтобы создать заметку или задачу.</string>

    //Navigation Strings
    <string name="nav_notes">Заметки</string>
    <string name="nav_notebooks">Блокноты</string>
    <string name="nav_tasks">Задачи</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_sync">Синхронизация</string>
    <string name="nav_log_out">Выйти из системы</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    //Toolbar Strings
    <string name="toolbar_all_notes">Все заметки</string>
    <string name="toolbar_all_tasks">Все задачи</string>
    <string name="toolbar_all_notebooks">Все блокноты</string>

    //Main menu
    <string name="menu_language">Язык</string>
    <string name="search">Поиск</string>

    //Notes
    <string name="new_notebook_add">Добавлен новый блокнот</string>
    <string name="warn_empty_notebook">Сохранить пустую заметку невозможно</string>

    //Settings
    <string name="settings_activity_title">Настройки</string>
    <string name="pref_notebook_title">Личный блокнот по умолчанию</string>
    <string name="pref_notebook_summary_def">Не выбран</string>

    //Notebook
    <string name="new_notebook">Новый блокнот</string>
    <string name="no_notebooks">Нет блокнотов</string>

    //Tasks
    <string name="new_task">Новая задача</string>
    <string name="task_checkbox_check">Готово!</string>
    <string name="task_checkbox_uncheck">Задача завершена</string>

    //for Dialog
    <string name="negative">ОТМЕНА</string>
    <string name="positive">ОК</string>

    //for Task RadioGroup
    <string name="radio_high">Очень важно!</string>
    <string name="radio_medium">Средне важно!</string>
    <string name="radio_low">Обычно</string>

    //for Language Preference
    <string-array name="lang_entries">
        <item>Русский</item>
        <item>Английский</item>
        <item>Казахский</item>
    </string-array>
    <string-array name="lang_entry_values">
        <item>ru</item>
        <item>en</item>
        <item>kk</item>
    </string-array>
    <string name="lang_default">Русский</string>

</resources>
