<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_notebooks"
            android:icon="@drawable/ic_notebooks"
            android:title="@string/nav_notebooks" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/nav_tasks" />
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>
    <item android:title="@string/nav_sync">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/nav_sync" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_log_out"
        android:title="@string/nav_log_out">

    </item>

</menu>